# March-2025-Game

./: .gitignore  CMakeLists.txt  readme.md
res/: level_1.txt  level_2.txt  level_3.txt  level_4.txt  level_5.txt  level_config.txt  level_config_readme.txt  objects_config.txt  objects_config_readme.txt
src/: grid.cpp  grid.hpp  gridColorManager.cpp  gridColorManager.hpp  grid_color_manager.cpp  grid_color_manager.hpp  inventory_item.cpp  inventory_item.hpp  inventory_manager.cpp  inventory_manager.hpp  level.hpp  levelManager.hpp  level_manager.cpp  level_manager.hpp  main.cpp  player.hpp  scene_manager.cpp  scene_manager.hpp  tile.cpp  tile.hpp
